# libbitcoin-database

./: build.cmd  configure.ac  install-cmake.sh  install-cmakepresets.sh  install.sh
.github/workflows/: ci.yml
builds/cmake/: CMakeLists.txt  CMakePresets.json  bitcoin-database-config.cmake.in  install-cmake.sh  install-presets.sh
builds/cmake-v2/: CMakeLists.txt  bitcoin-database-config.cmake.in
builds/gnu/: Makefile.am  configure.ac  install-gnu.sh
builds/msvc/: build-msvc.cmd
include/bitcoin/database/: error.hpp  query.hpp
include/bitcoin/database/impl/query/: confirmed.ipp
include/bitcoin/database/impl/query/address/: address_history.ipp  address_outpoints.ipp  address_unspent.ipp
include/bitcoin/database/impl/query/consensus/: consensus_forks.ipp
include/bitcoin/database/impl/query/navigate/: navigate_reverse.ipp
include/bitcoin/database/types/: history.hpp  unspent.hpp
src/: error.cpp
src/types/: history.cpp  unspent.cpp
test/: error.cpp
test/query/: confirmed.cpp
test/query/address/: address_history.cpp  address_outpoints.cpp
test/query/navigate/: navigate_reverse.cpp
test/types/: history.cpp  unspent.cpp
